[package]
name = "hello"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]

[dependencies]
rawr = { git = "https://github.com/GyrosOfWar/rawr" }
failure = "0.1.1"
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
structopt = "0.2.10"
egg-mode = "0.12.0"
rustc-serialize = "0.3.24"
tokio-core = "0.1.17"
fantoccini = "0.10.0"
futures = "0.1.23"
