[package]
name = "hello-rs"
description = "A command-line tool to submit links to various social platforms"
documentation = "https://github.com/hello-rust/hello"
homepage = "https://github.com/hello-rust/hello"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]

[dependencies]
rawr = { path = "rawr", version="0.2.0" }
failure = "0.1.6"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
structopt = "0.3.3"
egg-mode = "0.12.0"
rustc-serialize = "0.3.24"
tokio-core = "0.1.17"
fantoccini = "0.11.9"
futures = "0.3.0"
slack_api = "0.21.0"
